--- a/html/index.html
+++ b/html/index.html
@@ -4,12 +4,15 @@
 	<head> 
 		<title>test</title> 
 		<meta charset="UTF-8">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> 
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="../js/helpers.js"></script> 
 		<script src="../js/registering.js"></script>
 	</head> 
 	<body> 
 		<button onclick="switchRecord()" id="switcher"> Enregistrer</button> <br/>
 		<button onclick="display()" id="displayer"> Afficher </button>
+		<button onclick="testCookies()" id="displayer"> SetCookies </button>
+		<button onclick="displayCookies()" id="displayer"> DisplayCookies </button>
 		<div class="container">
 		</div> 
 	</body> 
