Florian arrete de baiser mes fichiers

--- a/html/record.html
+++ b/html/record.html
@@ -2,18 +2,16 @@
 
 <html> 
 	<head> 
-		<title>test</title> 
+		<title>Record</title> 
 		<meta charset="UTF-8">
+		<link rel="Stylesheet" href="../styles.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
 		<script src="../js/registering.js"></script>
 	</head> 
 	<body> 
+		<h1> Enregistrement des données : </h1> 
 		<button onclick="switchRecord()" id="switcher"> Enregistrer</button> <br/>
-		<button onclick="display()" id="displayer"> Afficher </button>
-		<button onclick="testCookies()" id="displayer"> SetCookies </button>
-		<button onclick="displayCookies()" id="displayer"> DisplayCookies </button>
-		<div class="container">
 		</div> 
 	</body> 
 </html>
