--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
 		<script src="../js/registering.js"></script>
+		<script src="../js/helpers.js"></script>
 	</head> 
 	<body> 
 		<button onclick="switchRecord()" id="switcher"> Enregistrer</button> <br/>
