--- a/html/record.html
+++ b/html/record.html
@@ -8,6 +8,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
 		<script src="../js/registering.js"></script>
+		<script src="../js/helpers.js"></script>
 	</head> 
 	<body> 
 		<h1> Enregistrement des données : </h1> 
