--- a/html/record.html
+++ b/html/record.html
@@ -4,11 +4,11 @@
 	<head> 
 		<title>Record</title> 
 		<meta charset="UTF-8">
-		<link rel="Stylesheet" href="../styles.css">
+		<link rel="Stylesheet" href="../css/style.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
-		<script src="../js/registering.js"></script>
 		<script src="../js/helpers.js"></script>
+		<script src="../js/registering.js"></script>
 	</head> 
 	<body> 
 		<h1> Enregistrement des données : </h1> 
