PAs de changement dans registering pourtant

--- a/html/visualize.html
+++ b/html/visualize.html
@@ -12,7 +12,9 @@
 	<body> 
 		<button onclick="setCookieID()" id="displayer"> SetCookieID </button>
 		<button onclick="display1Canva()" id="displayer"> DisplayCanva </button>
-		<div class="container">
+
+		<div class="canvansContainer">
+		</div>
 		</div> 
 	</body> 
 </html>
