Added test graph

--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,9 @@
 		<button onclick="display()" id="displayer"> Afficher </button>
 		<button onclick="testCookies()" id="displayer"> SetCookies </button>
 		<button onclick="displayCookies()" id="displayer"> DisplayCookies </button>
-		<div class="container">
+		<div id="canvasContainer">
 		</div> 
 	</body> 
 </html>
+
+
