--- a/html/visualize.html
+++ b/html/visualize.html
@@ -13,7 +13,7 @@
 		<button onclick="setCookieID()" id="displayer"> SetCookieID </button>
 		<button onclick="display1Canva()" id="displayer"> DisplayCanva </button>
 
-		<div class="canvansContainer">
+		<div id="canvasContainer">
 		</div>
 		</div> 
 	</body> 
