--- a/html/menu.html
+++ b/html/menu.html
@@ -2,9 +2,11 @@
 
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
 	<title>Accueil</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 	<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
@@ -12,60 +14,56 @@
 </head>
 <body>
 
-	<div class = "navbar navbar-default navbar-static banniere">
+	<div class = "banniere">
 
 		<div class ="user">
 			<span id="pseudoContainer"></span>
-			<a href="welcome.html" class="btn btn-danger" role="button">Déconnexion</a>
+			<a href="welcome.html" class="button btn-red">Déconnexion</a>
 		</div>
 
 		<h1>Home</h1>
 
 		<div class = "new-move-btn">
-			<a href="../html/form_registration.html" class="btn btn-info" role="button">Enregistrer un nouveau mouvement</a>
+			<a href="../html/form_registration.html" class="button btn-blue" role="button">Enregistrer un nouveau mouvement</a>
 		</div>
 
 	</div>
 
 	<div class = "search">
 
-		<h2>Recherche</h2>
+		<fieldset>
+			<legend>Recherche</legend>
+			<form>
+				<div class = "row">
+					<div class="col-xs-12 col col-sm-4 col-md-3 col-lg-2">
+						Mouvement :
+						<input type="text" id="SBmove">
+					</div>
 
-		<form>
-			<div class = "row">
-				<div class="col-xs-12 col col-sm-4 col-md-3 col-lg-2">
-					Mouvement :
-					<input type="text" id="SBmove">
+					<div class="col-xs-12 col col-sm-4 col-md-3 col-lg-2">
+						Utilisateur :
+						<input type="text" id="SBpseudo">
+					</div>
+					<div class="col-xs-12 col col-sm-4 col-md-3 col-lg-2">
+						Mots-clé :
+						<input type="text" id="SBKeyword" >
+					</div>
+					<div class="col-xs-12 col col-sm-4 col-md-3 col-lg-2">
+						Date :
+						<input type="text" id="SBDate" placeholder="DD/MM/YYYY">
+					</div>
+
+					<submit id="SBSubmit" value="Rechercher" onclick="filterDisplay(1)"><div class="button btn-white">Rechercher</div></submit>
 				</div>
-
-				<div class="col-xs-12 col col-sm-4 col-md-3 col-lg-2">
-					Utilisateur :
-					<input type="text" id="SBpseudo">
-				</div>
-				<div class="col-xs-12 col col-sm-4 col-md-3 col-lg-2">
-					Mots-clé :
-					<input type="text" id="SBKeyword" >
-				</div>
-				<div class="col-xs-12 col col-sm-4 col-md-3 col-lg-2">
-					Date :
-					<input type="text" id="SBDate" placeholder="DD/MM/YYYY">
-				</div>
-
-				<submit id="SBSubmit" value="Rechercher" onclick="filterDisplay(1)"><div class="btn btn-default">Rechercher</div></submit>
-
-			</div>
-		</form>
-
-	</div>
+			</form>
+	</fieldset>
+</div>
 
 	<div class="container-fluid">
 		<div class="pages" id="pagesMoves"></div>
 		<form name="formMove" action="visualize.html" method="get">
-
-			<div class="row" id="panelMoves">
-
-			</div>
-			<input type="submit">
+			<div class="row" id="panelMoves"></div>
+			<input class = "button btn-white" type="submit">
 		</form>
 	</div>
 
