--- a/html/welcome.html
+++ b/html/welcome.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<title>Connexion</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 	<script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
 	<script src="../js/helpers.js"></script>
 <body>
-	<div class="navbar navbar-default banniere">
+	<div class="banniere">
 		<h1>Connexion au Projet Basket</h1>
 	</div>
 
@@ -15,9 +15,9 @@
 		<form action="menu.html">
 			Entrez votre pseudo :
 			<br>
-			<input type="text" name="pseudo" class="pseudo" id="pseudo" required>
+			<input type="text" name="pseudo" class="inputPseudo" id="pseudo" required>
 			<br>
-			<button class="btn btn-info" onclick="registerPseudo()">Connexion</button>
+			<button class="button btn-blue" onclick="registerPseudo()">Connexion</button>
 		</form>
 	</div>
 </body>
