--- a/html/welcome.html
+++ b/html/welcome.html
@@ -10,7 +10,7 @@
 	<script src="../js/helpers.js"></script>
 <body>
 	<div class="banniere">
-		<h1>Connexion au Projet Basket</h1>
+		<h1>Connexion au Projet moveGG</h1>
 	</div>
 
 	<div class="connexionDiv">
