--- a/html/form_registration.html
+++ b/html/form_registration.html
@@ -27,17 +27,17 @@
 		<div class="formDiv">
 		<form>
 			<label for="name"> Nom* : </label>
-			<input type="text" class="name" name="name" placeholder="Votre Pseudo.." value="" required />
+			<input type="text" class="name" name="name" placeholder="Votre Pseudo.." value="" onchange="testContent()"/>
 			<label for="title"> Titre* : </label>
-			<input type="text" class="title" name="title" placeholder="Nom de votre mouvement.." required/>
+			<input type="text" class="title" name="title" placeholder="Nom de votre mouvement.." onchange="testContent()"/>
 			<label for="k-word1"> Mot Clé n°1* :  </label>
-			<input type="text" class="k-word1" name="k-word1" placeholder="1er mot clé.." required/>
+			<input type="text" class="k-word1" name="k-word1" placeholder="1er mot clé.." onchange="testContent()"/>
 			<label for="k-word2"> Mot Clé n°2 :</label>
 			<input type="text" class="k-word2" name="k-word2"  placeholder="2ème mot clé.."/>
 			<label for="k-word3"> Mot Clé n°3 : </label>
 			<input type="text" class="k-word3" name="k-word3"  placeholder="3ème mot clé.."/>
 			<p>*champs obligatoires</p>
-			<submit class="button btn-blue" onclick="registerCookies()">Enregistrer un mouvement </submit>
+			<submit class="button btn-blue" onclick="registerCookies()" disabled="true">Enregistrer un mouvement </submit>
 		</form>
 
 	</div>
