--- a/html/form_registration.html
+++ b/html/form_registration.html
@@ -37,7 +37,7 @@
 			<label for="k-word3"> Mot Clé n°3 : </label>
 			<input type="text" class="k-word3" name="k-word3"  placeholder="3ème mot clé.."/>
 			<p>*champs obligatoires</p>
-			<submit class="button btn-blue" id="validation" onclick="registerCookies()" disabled>Enregistrer un mouvement </submit>
+			<submit class="button btn-blue" id="validation" onsubmit="registerCookies()" disabled="disabled">Enregistrer un mouvement </submit>
 		</form>
 
 	</div>
