--- a/html/menu.html
+++ b/html/menu.html
@@ -63,7 +63,7 @@
 		<div class="pages" id="pagesMoves"></div>
 		<form name="formMove" action="visualize.html" method="get">
 			<div class="row" id="panelMoves"></div>
-			<input class = "button btn-white" type="submit">Visualiser</input>
+			<input class = "button btn-white" type="submit" value="Visualiser"/>
 		</form>
 	</div>
 
