--- a/html/form_registration.html
+++ b/html/form_registration.html
@@ -23,7 +23,7 @@
 
 	</div>
 
-	<body onload="fillName()">
+	<body onload="initForm()">
 		<div class="formDiv">
 		<form>
 			<label for="name"> Nom* : </label>
